# controllers/product_controller.go
@@ -11,24 +11,11 @@ import (
 
 type ProductController struct{}
 
-// CreateProduct godoc
-// @Summary Create a new product
-// @Description Create a new product
-// @Tags Products
-// @Accept json
-// @Produce json
-// @Param Authorization header string true "Bearer Token"
-// @Param product body models.Product true "Product information"
-// @Success 200 {object} models.Product
-// @Failure 400 {object} models.ErrorResponse
-// @Failure 401 {object} models.ErrorResponse
-// @Failure 500 {object} models.ErrorResponse
-// @Router /product [post]
 func (controller ProductController) CreateProduct(c *gin.Context) {
 	_, role, err := utils.ExtractData(c)
 
 	if role != "admin" {
-		c.JSON(http.StatusUnauthorized, gin.H{"error": "Only admin can Access"})
+		c.JSON(http.StatusUnauthorized, models.ErrorResponse{Error: "Only admin can Access"})
 		return
 	}
 	db, err := utils.Connect()
@@ -50,17 +37,6 @@ func (controller ProductController) CreateProduct(c *gin.Context) {
 	c.JSON(http.StatusCreated, product)
 }
 
-// GetProducts retrieves all products with pagination support
-// @Summary Get a list of products
-// @Description Get a list of products with pagination support
-// @Tags Products
-// @ID get-products
-// @Produce  json
-// @Param page query int false "Page number, default is 1"
-// @Param limit query int false "Number of products per page, default is 10"
-// @Success 200 {object} ProductsResponse
-// @Failure 500 {object} models.ErrorResponse
-// @Router /products [get]
 func (controller ProductController) GetProducts(c *gin.Context) {
 	// all user can access
 	db, err := utils.Connect()
@@ -102,17 +78,6 @@ func (controller ProductController) GetProducts(c *gin.Context) {
 	c.JSON(http.StatusOK, response)
 }
 
-// GetProduct retrieves a product by ID
-// @Summary Get a product by ID
-// @Description Retrieve a product using its unique identifier
-// @ID get-product-by-id
-// @Produce json
-// @Tags Products
-// @Param id path int true "Product ID"
-// @Success 200 {object} models.Product
-// @Failure 404 {object} models.ErrorResponse
-// @Failure 500 {object} models.ErrorResponse
-// @Router /products/{id} [get]
 func (controller ProductController) GetProduct(c *gin.Context) {
 	// all user can access
 	db, err := utils.Connect()
@@ -130,25 +95,11 @@ func (controller ProductController) GetProduct(c *gin.Context) {
 	c.JSON(http.StatusOK, product)
 }
 
-// UpdateProduct updates a product by ID
-// @Summary Update a product
-// @Description Update a product by ID
-// @Tags Products
-// @Accept json
-// @Produce json
-// @Param id path int true "Product ID"
-// @Param product body models.Product true "Product object"
-// @Success 200 {object} models.Product
-// @Failure 400 {object} models.ErrorResponse
-// @Failure 401 {object} models.ErrorResponse
-// @Failure 404 {object} models.ErrorResponse
-// @Failure 500 {object} models.ErrorResponse
-// @Router /products/{id} [put]
 func (controller ProductController) UpdateProduct(c *gin.Context) {
 	_, role, err := utils.ExtractData(c)
 
 	if role != "admin" {
-		c.JSON(http.StatusUnauthorized, gin.H{"error": "Only admin can Access"})
+		c.JSON(http.StatusUnauthorized, models.ErrorResponse{Error: "Only admin can Access"})
 		return
 	}
 	db, err := utils.Connect()
@@ -176,23 +127,11 @@ func (controller ProductController) UpdateProduct(c *gin.Context) {
 	c.JSON(http.StatusOK, product)
 }
 
-// DeleteProduct deletes a product by ID
-// @Summary Delete a product
-// @Description Delete a product by ID
-// @Tags Products
-// @Produce json
-// @Param id path int true "Product ID"
-// @Success 200 {object} models.Product
-// @Failure 400 {object} models.ErrorResponse
-// @Failure 401 {object} models.ErrorResponse
-// @Failure 404 {object} models.ErrorResponse
-// @Failure 500 {object} models.ErrorResponse
-// @Router /products/{id} [delete]
 func (controller ProductController) DeleteProduct(c *gin.Context) {
 	_, role, err := utils.ExtractData(c)
 
 	if role != "admin" {
-		c.JSON(http.StatusUnauthorized, gin.H{"error": "Only admin can Access"})
+		c.JSON(http.StatusUnauthorized, models.ErrorResponse{Error: "Only admin can Access"})
 		return
 	}
 	db, err := utils.Connect()
@@ -226,22 +165,11 @@ func (controller ProductController) DeleteProduct(c *gin.Context) {
 	c.JSON(http.StatusOK, models.ErrorResponse{Error: "Product deleted successfully"})
 }
 
-// SearchProduct godoc
-// @Summary Search Product by name
-// @Description Search Product by name
-// @Tags Product
-// @Accept json
-// @Produce json
-// @Param query query string true "Search query"
-// @Success 200 {object} []models.Product
-// @Failure 400 {object} models.ErrorResponse
-// @Failure 500 {object} models.ErrorResponse
-// @Router /Product/search [get]
 func (controller ProductController) SearchProduct(c *gin.Context) {
 
 	db, err := utils.Connect()
 	if err != nil {
-		c.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
+		c.JSON(http.StatusInternalServerError, models.ErrorResponse{Error: err.Error()})
 		return
 	}
 
@@ -250,7 +178,7 @@ func (controller ProductController) SearchProduct(c *gin.Context) {
 
 	result := db.Where("name LIKE ?", query).Find(&Product)
 	if result.Error != nil {
-		c.JSON(http.StatusInternalServerError, gin.H{"error": result.Error.Error()})
+		c.JSON(http.StatusInternalServerError, models.ErrorResponse{Error: result.Error.Error()})
 		return
 	}
 
